BP-2441: scss improvement, fix flickering

--- a/packages/verification-vue-component/src/style/components/verification/_file_selection.scss
+++ b/packages/verification-vue-component/src/style/components/verification/_file_selection.scss
@@ -3,16 +3,6 @@
     border-style: $verification-dropbox-border-style;
     border-color: $verification-blue;
 
-    .input-file {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        opacity: 0;
-    }
-
     .content {
         display: flex;
         max-width: 430px;
@@ -42,6 +32,7 @@
 
     .dropbox {
         height: 100%;
+        pointer-events: none;
 
         .content {
             flex-direction: column;
@@ -83,6 +74,16 @@
 
     &:hover {
         background-color: mix($verification-blue, $white, 10%);;
+    }
+
+    .input-file {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+        opacity: 0;
     }
 
     .content {
